<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
            android:text="@string/label_titulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:textSize="32sp" android:gravity="center" android:textStyle="bold"/>
    <TextView
            style="@style/label_formulario"
            android:text="@string/label_peso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="48dp" app:layout_constraintHorizontal_bias="0.489" tools:text="Peso"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/inputPeso" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.506" android:hint="@string/hint_peso"/>
    <TextView
            style="@style/label_formulario"
            android:text="@string/label_altura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/inputPeso" app:layout_constraintEnd_toEndOf="@+id/inputPeso"
            app:layout_constraintStart_toStartOf="@+id/inputPeso"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputAltura"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:hint="@string/hint_altura"/>
    <TextView
            style="@style/label_formulario"
            android:text="@string/label_sexo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="@+id/inputAltura"
            app:layout_constraintStart_toStartOf="@+id/inputAltura" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/inputAltura"/>
    <Spinner
            android:entries="@array/sexos"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:id="@+id/spSexo"
            app:layout_constraintEnd_toEndOf="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/textView4"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <Button
            android:text="@string/button_calcular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btCalcular" app:layout_constraintEnd_toEndOf="@+id/spSexo"
            app:layout_constraintStart_toStartOf="@+id/spSexo" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/spSexo"/>
    <Button
            android:text="@string/button_limpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btLimpar" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btCalcular" app:layout_constraintEnd_toEndOf="@+id/btCalcular"
            app:layout_constraintStart_toStartOf="@+id/btCalcular"/>
</androidx.constraintlayout.widget.ConstraintLayout>